Feature/compare versions (#152)
* Update models and migrations

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Saving documents

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Load text from server

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Create save message

* Rebase adjustments

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Adjust contextual toolbar heigth

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add saveMessage

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update documentversion model

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix bugs created by previous migration

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add version on group creation

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Undo same hour version delete

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Allow load a specific version from document

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add message when the version not found

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Create named version on group creation

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Create named version on click at toolbar

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix this/self confusion

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Saving documents

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix contextual toolbar

* Create timeline sidebar

* Improve animation

* Improve timeline

* Load version from backend

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update timeline on autosave

Signe

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -67,7 +67,10 @@
 @import 'components/version-timeline';
 @import 'components/dropdown-menu';
 @import 'components/breadcrumb-menu';
+@import 'components/compare-checkbox';
 @import 'components/page-minimap';
+@import 'components/close-diff';
+@import 'components/text-diff';
 @import 'components/suggestion-metrics';
 
 // Vendor
