--- a/src/static/scss/components/_side-bar.scss
+++ b/src/static/scss/components/_side-bar.scss
@@ -47,8 +47,84 @@
       @include icon('filter');
     }
 
-    & > .action {
+    & > .actions {
       display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+      padding: 1.6rem;
+    }
+
+    & > .actions > .app-button {
+      position: absolute;
+      padding: 0.5rem 1rem;
+      margin-bottom: 0.5rem;
+      font-size: 0.8rem;
+      visibility: hidden;
+      transform: translateY(-2.75rem);
+      transition: none;
+      opacity: 0;
+
+      & ~ .action {
+        padding: 0.5rem 1rem;
+        transform: translateX(1rem);
+      }
+
+      &.-show {
+        position: relative;
+        visibility: visible;
+        transform: translateY(0);
+        opacity: 1;
+        transition: all .25s $swift-out;
+
+        & ~ .action {
+          transform: translateX(0);
+        }
+      }
+    }
+
+    & > .actions > .action {
+      font-size: $font-size-micro;
+
+      cursor: pointer;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      color: $color-brand;
+
+      &:hover {
+        color: lighten($color-brand, 10%);
+      }
+    }
+  }
+
+  & > .clusters {
+    display: flex;
+    overflow-x: hidden;
+    overflow-y: auto;
+    flex-direction: column;
+
+    height: calc(100% - 9.8rem);
+
+    &::-webkit-scrollbar {
+      width: 0;
+
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #F00;
+    }
+
+    &::before {
+      position: fixed;
+      z-index: 1;
+      top: calc(100% - 5rem);
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+      content: '';
+      pointer-events: none;
 
       height: 100%;
       margin-right: .8rem;
