--- a/src/templates/components/versions-list.html
+++ b/src/templates/components/versions-list.html
@@ -2,6 +2,13 @@
   <li class="item js-namedVersions js-currentVersion {% if not selected_version.parent and selected_version.auto_save %}-active{% endif %}">
     <div class="named js-namedVersion js-version {% if not selected_version.parent and selected_version.auto_save %}-selected{% endif %}" data-version-number="{{latest_saves.first.number}}">
       <h2 class="title">Versão Atual</h2>
+
+      <div class="compare-checkbox _hidden js-compareCheckbox">
+        <input id="checkbox" class="js-checkboxElement" type="checkbox" />
+        <label for="checkbox">
+          <span></span>
+        </label>
+      </div>
     </div>
     <ol class="autosaves js-autosaves {% if not selected_version.parent %}-show{% endif %}">
       {% for autosave in latest_saves %}
@@ -18,6 +25,13 @@
       <span class="time">{{version.created|date:'H\hi'}}</span>
       <h2 class="title">{{version.name}}</h2>
       <span class="date">{{version.created|date:'d \d\e b, Y'}}</span>
+
+      <div class="compare-checkbox _hidden js-compareCheckbox">
+        <input id="checkbox" class="js-checkboxElement" type="checkbox" />
+        <label for="checkbox">
+          <span></span>
+        </label>
+      </div>
     </div>
     <ol class="autosaves js-autosaves {% if version == selected_version.parent %}-show{% endif %}">
       {% for autosave in version.children.all %}
