--- a/src/templates/components/confirm-form-modal.html
+++ b/src/templates/components/confirm-form-modal.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <h1>Estamos quase lá!</h1>
-<p>Para finalizar seu cadastro, é só clicar no botão abaixo! 😉 Integrantes inseridos ou removidos do grupo sempre serão notificados via e-mail, ok? </p>
+<p>Integrantes inseridos ou removidos do grupo sempre serão notificados via e-mail, ok? 😉</p>
 <button class="app-button -green" form="invited_group_form">Enviar</button>
 {% endblock content %}
 
