--- a/src/static/scss/components/_suggestion-metrics.scss
+++ b/src/static/scss/components/_suggestion-metrics.scss
@@ -280,6 +280,8 @@
   & > .empty {
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 100%;
 
     height: 100%;
 
