--- a/src/static/scss/components/_theme-autocomplete.scss
+++ b/src/static/scss/components/_theme-autocomplete.scss
@@ -3,32 +3,31 @@
 
   position: relative;
 
-  margin-bottom: -.5rem;
-
-  & > .themes {
+  & > .themes > .wrapper {
     display: flex;
     align-items: center;
+  }
 
-    padding-top: .5rem;
+  & .title {
+    font-size: .5625rem;
+    font-weight: 500;
 
-    & > .title {
-      font-size: .5625rem;
-      font-weight: 500;
+    margin-top: .6rem;
+    margin-right: .75rem;
 
-      margin-right: .75rem;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
 
-      letter-spacing: 1.5px;
-      text-transform: uppercase;
+    color: $color-gray;
+  }
 
-      color: $color-gray;
-    }
+  & .tags {
+    display: flex;
 
-    & > .tags {
-      display: flex;
+    margin-top: .5rem;
 
-      & > * + * {
-        margin-left: .75rem;
-      }
+    & > * + * {
+      margin-left: .75rem;
     }
   }
 
