--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -72,6 +72,7 @@
 @import 'components/close-diff';
 @import 'components/text-diff';
 @import 'components/suggestion-metrics';
+@import 'components/datepicker';
 
 // Vendor
 @import 'vendor/tooltip';
