--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -23,7 +23,9 @@
 {% block content %}
 
 {% can_suggest object request.user as selection_enabled %}
+{% if request.user.profile.profile_type != 'owner' %}
 <div class="howto-button js-howtoButton" aria-label="Como participar?"></div>
+{% endif %}
 <main class="document-body js-documentBody" data-selection-enabled="{% if selection_enabled %}true{% else %}false{% endif %}" data-group-id="{{ object.id }}">
   <div class="wrapper">
     <div class="invisible"></div>
