--- a/src/templates/pages/new-document.html
+++ b/src/templates/pages/new-document.html
@@ -5,9 +5,9 @@
 <main class="section-group">
   <header>
     {% if object %}
-    <h2>Editar Documento</h2>
+    <h2>Editar dados do Documento</h2>
     {% else %}
-    <h2>Criar Novo Projeto</h2>
+    <h2>Criar Novo Documento</h2>
     {% endif %}
 
     <a onclick="window.history.back();" class="link-back">Voltar</a>
