--- a/src/templates/components/tool-bar.html
+++ b/src/templates/components/tool-bar.html
@@ -21,7 +21,7 @@
       {% include "svgs/cloud-icon.html" %}
     </a>
     {% endif %}
-    <a href="#" class="icon" aria-label="Exportar">
+    <a href="javascript:window.print();" class="icon" aria-label="Exportar">
       {% include "svgs/download-icon.html" %}
     </a>
   </div>
