--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -11,11 +11,11 @@
 }
 
 .document-editor.-compare {
-  width: 100%;
-  padding-left: 0;
-
   flex-direction: column;
+
+  width: 100%;
   padding-right: 0;
+  padding-left: 0;
 
   & > .text-diff {
     display: flex;
@@ -27,6 +27,7 @@
 
   & > .side-bar > .toggle::before {
     transform: rotate(0);
+
     opacity: 0;
   }
 
@@ -36,8 +37,11 @@
 
   & > article.-compare {
     visibility: visible;
+
     width: 100%;
+
     transform: translateX(0);
+
     opacity: 1;
   }
 
@@ -48,31 +52,37 @@
 
 
 .tip {
-    position: sticky;
-    left: 100%;
-    top: 50%;
-    width: 10rem;
-    text-align: center;
-    margin-right: -11rem;
-    height: 0;
-    pointer-events: none;
+  position: sticky;
+  top: 50%;
+  left: 100%;
+
+  width: 10rem;
+  height: 0;
+  margin-right: -11rem;
+
+  text-align: center;
+  pointer-events: none;
 }
 
 .tip > .message {
-    font-size: 0.75rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 600;
-    color: #949494;
-    line-height: 0.7;
+  font-size: .75rem;
+  font-weight: 600;
+  line-height: .7;
+
+  letter-spacing: 1px;
+  text-transform: uppercase;
+
+  color: #949494;
 }
 
 .tip > .message > .key {
-    background-color: #474747;
-    color: white;
-    padding: 0.4rem 0.5rem;
-    border-radius: 2px;
-    font-weight: 600;
+  font-weight: 600;
+
+  padding: .4rem .5rem;
+
+  color: white;
+  border-radius: 2px;
+  background-color: #474747;
 }
 
 .document-editor {
@@ -108,7 +118,7 @@
   }
 
   & > article {
-    font-size: 1rem;
+    font-size: 1.25rem;
 
     box-sizing: border-box;
     width: 100%;
@@ -119,10 +129,13 @@
 
   & > article.-compare {
     visibility: hidden;
+
     width: 0;
-    transform: translateX(100%);
-    opacity: 0;
+
     transition: opacity .15s $swift-out, transform .25s $swift-out;
+    transform: translateX(100%);
+
+    opacity: 0;
   }
 
   & > article > p {
