Add more metrics

--- a/src/static/scss/components/_dropdown-menu.scss
+++ b/src/static/scss/components/_dropdown-menu.scss
@@ -273,6 +273,13 @@
     background-color: #FFF;
   }
 
+  & > .list .version {
+    color: $color-gray;
+    font-size: $font-size-micro;
+    display: block;
+    margin-top: .25rem;
+  }
+
   & > .list > .dropdown {
     position: relative;
 
