--- a/src/static/scss/components/_excerpt-wrapper.scss
+++ b/src/static/scss/components/_excerpt-wrapper.scss
@@ -19,39 +19,87 @@
     font-style: italic;
   }
 
-  & > .votes {
-    position: absolute;
-    top: 50%;
-    left: -4.5rem;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    width: 2.5rem;
-    height: 1.4rem;
-
-    transform: translateY(-50%);
-
-    border: 1px solid #B255C9;
-    background-color: rgba(#B255C9, .6);
+  &.-analysis {
+    margin-top: 4rem;
   }
 
-  & > .votes > .value {
-    font-size: $font-size-centi;
+  & > .metrics {
+    position: absolute;
+    top: 50%;
+    left: -7.5rem;
+
+    width: 6rem;
+
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    text-align: right;
+    text-align: right;
+  }
+
+  & > .metrics > * + * {
+    margin-top: .5rem;
+    margin-left: 1rem;
+  }
+
+  & > .metrics > .item {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  & > .metrics > .item.-votes {
+    @include icon('votes');
+
+    &::before {
+      font-size: $font-size-mili;
+
+      margin-right: .25rem;
+    }
+  }
+
+  & > .metrics > .item.-opinions {
+    @include icon('comment-black');
+
+    &::before {
+      font-size: $font-size-micro;
+
+      margin-right: .25rem;
+    }
+  }
+
+  & > .metrics > .item.-participants {
+    @include icon('public');
+
+    &::before {
+      font-size: $font-size-centi;
+
+      margin-right: .25rem;
+    }
+  }
+
+  & > .metrics > .item > .value {
+    font-size: $font-size-mili;
     font-weight: bold;
 
-    position: absolute;
-    z-index: 1;
+    margin-right: .5rem;
 
     text-transform: uppercase;
 
-    color: #FFF;
+    color: $color-deep-gray;
   }
 
-  & > .votes > .bar {
+  & > .metrics > .item > .bar {
+    position: relative;
+
+    width: 1rem;
+    height: .25rem;
+
+    border: 1px solid #B255C9;
+  }
+
+  & > .metrics > .item > .bar > .size {
     position: absolute;
-    left: 0;
+    right: 0;
 
     height: 100%;
 
