--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -42,20 +42,30 @@
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         <span class="js-defaultText">...</span>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
-        {% if excerpt|excerpt_participants:group > 0 %}
-        <span class="votes">
-          <span class="value">{{excerpt|excerpt_participants:group}}</span>
-          <span class="bar" style="width: {% get_percent excerpt|excerpt_participants:group participation_count %}%;"></span>
-        </span>
-        {% endif %}
       </p>
       {% else %}
-      <p class="excerpt-wrapper {% excerpt_classes excerpt %} js-excerptWrapper">
+      <p class="excerpt-wrapper -analysis {% excerpt_classes excerpt %} js-excerptWrapper">
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
-        <span class="votes">
-          <span class="value">{{excerpt|excerpt_participants:group}}</span>
-          <span class="bar" style="width: {% get_percent excerpt|excerpt_participants:group participation_count %}%;"></span>
+        <span class="metrics">
+          <span class="item -votes">
+            <span class="value">{{excerpt|excerpt_participants:group}}</span>
+            <span class="bar">
+              <span class="size" style="width: {% get_percent excerpt|excerpt_participants:group participation_count %}%;"></span>
+            </span>
+          </span>
+          <span class="item -opinions">
+            <span class="value">{{excerpt|excerpt_participants:group}}</span>
+            <span class="bar">
+              <span class="size" style="width: {% get_percent excerpt|excerpt_participants:group participation_count %}%;"></span>
+            </span>
+          </span>
+          <span class="item -participants">
+            <span class="value">{{excerpt|excerpt_participants:group}}</span>
+            <span class="bar">
+              <span class="size" style="width: {% get_percent excerpt|excerpt_participants:group participation_count %}%;"></span>
+            </span>
+          </span>
         </span>
       </p>
       {% endif %}
