--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -37,25 +37,25 @@
       <div class="dropdown-menu">
         {% if group %}
           {% if group.public_participation %}
-          <span class="-opened">Participação Pública</span>
+          <span class="-opened">Participação Pública<span class="version"> - {{group.version.name}}</span></span>
           {% else %}
           <span class="-closed">{{ group.thematic_group.name }}</span>
           {% endif %}
         {% else %}
-          <span>Participação</span>
+          <span>Abrir para participação</span>
         {% endif %}
         <ul class="list js-menuList">
           {% for public_participation in public_group %}
           {% if public_participation.group_status == 'waiting' %}
           <a href="#" class="title -opened js-waitingButton">
-            <span>Participação Pública</span>
+            <span>Participação Pública<span class="version">{{public_participation.version.name}}</span></span>
             <div class="info">
                 <div class="item -blue">Aguardando</div>
             </div>
           </a>
           {% else %}
           <a href="{% url 'document_editor_analyze' 'analysis' object.id %}?group_id={{public_participation.id}}" class="title -opened">
-            <span>Participação Pública</span>
+            <span>Participação Pública<span class="version">{{public_participation.version.name}}</span></span>
             <div class="info -full">
               <div class="item -participants">
                 {{ public_participation|group_participants }}
@@ -97,7 +97,7 @@
             <!-- Criar nova -->
             {% for invited_group in private_groups %}
               <a href="{% url 'document_editor_analyze' 'analysis' object.id %}?group_id={{invited_group.id}}">
-                <span>{{invited_group.thematic_group.name}}</span>
+                <span>{{invited_group.thematic_group.name}}<span class="version">{{invited_group.version.name}}</span></span>
                 <div class="info">
                   <div class="item -participants">{{invited_group.thematic_group.participants.count}}</div>
                   <div class="item -opinions">{{invited_group.suggestions.count}}</div>
