--- a/src/static/scss/components/_contextual-toolbar.scss
+++ b/src/static/scss/components/_contextual-toolbar.scss
@@ -6,18 +6,20 @@
   padding: .5rem 1rem;
 
   user-select: none;
+  transition: border-color .1s ease, box-shadow .1s ease;
+  animation: reveal-from-bottom .3s $swift-out;
 
   border: 1px solid $color-grayish;
   border-top: 3px solid $color-brand;
   border-radius: .25rem;
   background-color: white;
   box-shadow: 2px 2px 9px 0 hsla(0, 0%, 50%, .3);
-  transition: border-color 0.1s ease, box-shadow 0.1s ease;
 
   &.-error {
+    animation: shake .1s 2 ease;
+
     border-color: $color-red;
-    animation: shake 0.1s 2 ease;
-    box-shadow: 0px 0px 10px 2px hsla(0, 77%, 66%, 0.4);
+    box-shadow: 0 0 10px 2px hsla(0, 77%, 66%, .4);
   }
 
   & > .list {
@@ -56,7 +58,8 @@
   }
 
   & > .list > .item > .shortcut {
-    text-decoration: underline;
     font-weight: 600;
+
+    text-decoration: underline;
   }
 }
