--- a/src/static/scss/components/_app-tag.scss
+++ b/src/static/scss/components/_app-tag.scss
@@ -3,12 +3,104 @@
   align-items: flex-end;
   justify-content: center;
 
-  &.-public > span {
-    color: $color-brand;
+  &.-button {
+    padding: 1rem;
+
+    cursor: pointer;
+    transition: all .15s $swift-out;
+
+    border-width: 1px;
+    border-style: solid;
+    border-color: transparent;
+    background-color: $color-whitesmoke;
+
+    &:hover {
+      border-color: currentColor;
+    }
+
+    &.-active {
+      border-color: currentColor;
+    }
   }
 
-  &.-private > span {
+  &.-public {
+    color: $color-brand;
+
+    & > span {
+      color: $color-brand;
+    }
+
+    & > .icon {
+      @include mask-icon('public');
+    }
+
+    & > .icon::before {
+      font-size: $font-size-centi;
+
+      margin-right: .15rem;
+
+      background-color: $color-brand;
+    }
+  }
+
+  &.-private {
     color: $color-deep-gray;
+
+    & > span {
+      color: $color-deep-gray;
+    }
+
+    & > .icon {
+      @include mask-icon('padlock');
+    }
+
+    & > .icon::before {
+      font-size: $font-size-centi;
+
+      margin-right: .15rem;
+
+      background-color: $color-deep-gray;
+    }
+  }
+
+  &.-votes {
+    color: $color-purple;
+
+    & > span {
+      color: $color-purple;
+    }
+
+    & > .icon {
+      @include mask-icon('votes');
+    }
+
+    & > .icon::before {
+      font-size: $font-size-mili;
+
+      margin-right: .15rem;
+
+      background-color: $color-purple;
+    }
+  }
+
+  &.-opinions {
+    color: $color-link;
+
+    & > span {
+      color: $color-link;
+    }
+
+    & > .icon {
+      @include mask-icon('comment-black');
+    }
+
+    & > .icon::before {
+      font-size: $font-size-micro;
+
+      margin-right: .15rem;
+
+      background-color: $color-link;
+    }
   }
 
   &.-theme {
@@ -33,11 +125,15 @@
     font-weight: 600;
     line-height: 1;
 
-    margin-left: .25rem;
+    margin-left: .15rem;
 
     letter-spacing: 1px;
     text-transform: uppercase;
 
     color: $color-gray;
+  }
+
+  & > .icon {
+    display: inline-flex;
   }
 }
