--- a/src/templates/emails/participation_request.html
+++ b/src/templates/emails/participation_request.html
@@ -222,7 +222,7 @@
                                 <tr>
                                   <td style="padding-right: 0px;padding-left: 0px;font-size: 0;line-height: 0;" align="center">
 
-                                    <img align="center" border="0" src="{{ site_url }}{% static 'img/mail.png' %}" alt="Mail" title="Mail" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;width: 100%;max-width: px;"
+                                    <img align="center" border="0" src="http://{{ site_url }}{% static 'img/mail.png' %}" alt="Mail" title="Mail" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;width: 100%;max-width: px;"
                                       width="" />
 
                                   </td>
@@ -353,7 +353,7 @@
                                 <tr>
                                   <td style="padding-right: 0px;padding-left: 0px;font-size: 0;line-height: 0;" align="center">
 
-                                    <img align="center" border="0" src="{{ site_url }}{% static 'img/brand-email.png' %}" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;width: 100%;max-width: px;"
+                                    <img align="center" border="0" src="http://{{ site_url }}{% static 'img/brand-email.png' %}" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;width: 100%;max-width: px;"
                                       width="" />
 
                                   </td>
