--- a/src/templates/emails/owner_invitation.html
+++ b/src/templates/emails/owner_invitation.html
@@ -222,7 +222,7 @@
                                 <tr>
                                   <td style="padding-right: 0px;padding-left: 0px;font-size: 0;line-height: 0;" align="center">
 
-                                    <img align="center" border="0" src="{{ site_url }}{% static 'img/mail.png' %}" alt="Mail" title="Mail" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;width: 100%;max-width: px;"
+                                    <img align="center" border="0" src="http://{{ site_url }}{% static 'img/mail.png' %}" alt="Mail" title="Mail" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;width: 100%;max-width: px;"
                                       width="" />
 
                                   </td>
@@ -305,9 +305,9 @@
                             <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;" align="left">
 
                               <div align="center">
-                                <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:arial,helvetica,sans-serif;"><tr><td style="font-family:arial,helvetica,sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="/notifications/authorization/owner/{{ hash }}/" style="height:44px; v-text-anchor:middle; width:194px;" arcsize="0%" stroke="f" fillcolor="#2da965"><w:anchorlock/><center style="color:#FFFFFF;font-family:arial,helvetica,sans-serif;"><![endif]-->
-                                <a href="{{site_url}}/new-wikilegis/notifications/authorization/{{ hash }}/" target="_self" style="display: inline-block;font-family:arial,helvetica,sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #2da965; border-radius: 0px; -webkit-border-radius: 0px; -moz-border-radius: 0px; width: auto; padding: 14px 34px; mso-border-alt: none;">
-                                  <span style="line-height:120%;">ACEITAR CONVITE</span>
+                                <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;font-family:arial,helvetica,sans-serif;"><tr><td style="font-family:arial,helvetica,sans-serif;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://{{ site_url }}{% url 'home' %}" style="height:44px; v-text-anchor:middle; width:194px;" arcsize="0%" stroke="f" fillcolor="#2da965"><w:anchorlock/><center style="color:#FFFFFF;font-family:arial,helvetica,sans-serif;"><![endif]-->
+                                <a href="http://{{ site_url }}{% url 'home' %}" target="_self" style="display: inline-block;font-family:arial,helvetica,sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #2da965; border-radius: 0px; -webkit-border-radius: 0px; -moz-border-radius: 0px; width: auto; padding: 14px 34px; mso-border-alt: none;">
+                                  <span style="line-height:120%;">CRIAR CONTA</span>
                                 </a>
                                 <!--[if mso]></center></v:roundrect></td></tr></table><![endif]-->
                               </div>
@@ -362,7 +362,7 @@
                                 <tr>
                                   <td style="padding-right: 0px;padding-left: 0px;font-size: 0;line-height: 0;" align="center">
 
-                                    <img align="center" border="0" src="{{ site_url }}{% static 'img/brand-email.png' %}" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;width: 100%;max-width: px;"
+                                    <img align="center" border="0" src="http://{{ site_url }}{% static 'img/brand-email.png' %}" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;width: 100%;max-width: px;"
                                       width="" />
 
                                   </td>
