--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -11,13 +11,13 @@
 <meta property="og:title" content="{{ object.document.title }}">
 <meta property="og:site_name" content="Wikilegis">
 <meta property="og:description" content="{{ object.document.description }}">
-<meta property="og:image" content="{{ request.scheme }}://{{ site_url}}{% static 'img/share-wikilegis.jpg' %}">
+<meta property="og:image" content="{{ protocol }}{{ site_url }}{% static 'img/share-wikilegis.jpg' %}">
 <meta property="og:image:type" content="image/jpg">
 <meta property="og:image:width" content="600">
 <meta property="og:image:height" content="300">
 <meta property="og:type" content="website">
 <meta property="og:type" content="website">
-<meta property="twitter:image" content="{{ request.scheme }}://{{ site_url }}{% static 'img/share-wikilegis.jpg' %}">
+<meta property="twitter:image" content="{{ protocol }}{{ site_url }}{% static 'img/share-wikilegis.jpg' %}">
 {% endblock metatags %}
 
 {% block content %}
