--- a/src/static/scss/ambience/_animation.scss
+++ b/src/static/scss/ambience/_animation.scss
@@ -191,6 +191,24 @@ $swift-out: cubic-bezier(.55, 0, .1, 1);
   }
 }
 
+@keyframes reveal-from-right {
+  0% {
+    transform: translateX(50%);
+
+    opacity: 0;
+  }
+
+  90% {
+    opacity: 1;
+  }
+
+
+  100% {
+    transform: translateX(0);
+
+    opacity: 1;
+  }
+}
 @keyframes fade-to-left {
   0% {
     transform: translateX(0);
